<resources>
    <string name="app_name">Wishlist</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="emailheader">Email</string>
    <string name="email">Email</string>
    <string name="login">LOGIN</string>
    <string name="remeber_me">REMEBER ME</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="agree_to_our_terms_and_condition">Agree to our terms and Condition</string>
    <string name="already_have_any_account">Already have any Account ?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="don_t_have_any_account">Don\'t have any Account ?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
